buttons show and hide correctly, better performance on mobile, add header

--- a/css/app.css
+++ b/css/app.css
@@ -5,6 +5,19 @@ main {
   margin: 2.5vh 5vw;
   background-color: white;
 }
+h1{
+  display: inline-block;
+  margin: 0 0;
+}
+button {
+  width: 5vw;
+  height: 4vh;
+  margin: 1vh 2vw;
+  font-size: 1vh;
+  border: 1px solid #eeeeee;
+  border-radius: 3px;
+}
+
 .overlay {
   position: absolute;
   height: 100%;
@@ -14,24 +27,22 @@ main {
 }
 .poem {
   position: relative;
-  margin-top: 10%;
-  height: 85px;
+  margin-top: 5vh;
+  height: 23vh;
   width: 60%;
-  margin-left: 25px;
+  margin-left: 1.5vw;
   float: left;
+  border: 1px solid black;
 }
 .showpoem {
-  right: 120px;
-  font-size: 4vh;
-  height: 260px;
-  width: 460px;
-  margin-left: 40px;
+  margin: 25vh 20vw;
+  height: 26vh;
+  width: 26vw;
   background-color: white;
   position: absolute;
   opacity: 1.0;
   z-index: 99;
 }
-
 .freezer {
   height: 35%;
   width: 100%;
@@ -41,7 +52,7 @@ main {
 }
 .fridge {
   margin-top: 0.5vh;
-  height: 60%;
+  height: 70vh;
   width: 100%;
   background-color: #eeeeee;
   border: 1px solid #eeeeee;
@@ -50,8 +61,8 @@ main {
 .titlecard {
   float: right;
   margin-top: 2vh;
-  margin-right: 2vh;
-  height: 60%;
+  margin-right: 1vh;
+  height: 20%;
   width: 30%;
   background-color: white;
   border: 2px solid lightgray;
@@ -64,9 +75,13 @@ p {
   background-color: white;
   border: 1px solid white;
   border-radius: 3px;
-  font-size: 2vh;
+  font-size: 1.5vh;
   margin: 6px;
 }
 .drugged {
   transform: rotate(0deg);
+}
+
+.showpoem p {
+  font-size: 5vh;
 }
